[workspace]
members = [
    "pact_*"
]
resolver = "2"

[patch.crates-io]
onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false }
pact_models = { git = 'https://github.com/pact-foundation/pact-reference.git', branch = "issue/134_missing_buffer_logs" }
pact_matching = { git = 'https://github.com/pact-foundation/pact-reference.git', branch = "issue/134_missing_buffer_logs" }
pact-plugin-driver = { git = 'https://github.com/pact-foundation/pact-plugins.git', branch = "issue/134_missing_buffer_logs" }