[package]
name = "compatibility-suite"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
bytes = "1.4.0"
cucumber = "0.20.0"
futures = "0.3.28"
itertools = "0.11.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
pact_models = "~1.1.9"
pact_matching = { version = "1.1.4", path = "../rust/pact_matching" }
pact_mock_server = { version = "1.2.2", path = "../rust/pact_mock_server" }
pact_verifier = { version = "1.0.2", path = "../rust/pact_verifier" }
pact_consumer = { version = "1.0.2", path = "../rust/pact_consumer" }
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["rustls-tls-native-roots", "json"] }
serde_json = "1.0.102"
sxd-document = "0.3.2"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log", "fmt"] }
uuid = { version = "1.4.0", features = ["v4"] }

[[test]]
name = "v1_consumer"
harness = false

[[test]]
name = "v1_provider"
harness = false

[[test]]
name = "v2_consumer"
harness = false

[[test]]
name = "v2_provider"
harness = false

[[test]]
name = "v3"
harness = false

[[test]]
name = "v3_provider"
harness = false
