[package]
name = "compatibility-suite"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
base64 = "0.21.5"
bytes = "1.5.0"
cucumber = "0.20.1"
futures = "0.3.29"
itertools = "0.11.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
pact_models = { version = "~1.1.17", path = "../rust/pact_models" }
pact_matching = { version = "1.1.9", path = "../rust/pact_matching" }
pact_mock_server = { version = "1.2.4", path = "../rust/pact_mock_server" }
pact_verifier = { version = "1.0.5", path = "../rust/pact_verifier" }
pact_consumer = { version = "1.1.1", path = "../rust/pact_consumer" }
pretty_assertions = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["rustls-tls-native-roots", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
sxd-document = "0.3.2"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "tracing-log", "fmt"] }
uuid = { version = "1.5.0", features = ["v4"] }

[patch.crates-io]
pact_models = { path = "../rust/pact_models" }

[[test]]
name = "v1_consumer"
harness = false

[[test]]
name = "v1_provider"
harness = false

[[test]]
name = "v2_consumer"
harness = false

[[test]]
name = "v2_provider"
harness = false

[[test]]
name = "v3"
harness = false

[[test]]
name = "v3_provider"
harness = false

[[test]]
name = "v3_message"
harness = false

[[test]]
name = "v4"
harness = false
