[package]
name = "pact_mock_server"
version = "2.0.2"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements in process mock server"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-core-mock-server/tree/main/pact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies
tls = ["dep:hyper-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:tokio-rustls", "dep:rcgen", "dep:rustls-webpki"]

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
futures = "0.3.30"
hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-rustls = { version = "0.27.2", optional = true, default-features = false, features = ["http1", "http2", "ring", "webpki-tokio", "tls12", "logging"]  }
hyper-util = { version = "0.1.7", features = ["full"] }
itertools = "0.13.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
pact_matching = { version =  "~1.2.7", default-features = false }
pact_models = { version = "~1.2.4", default-features = false }
pact-plugin-driver = { version = "~0.7.1", optional = true, default-features = false }
rcgen = {  version = "0.13.1", optional = true, default-features = false, features = ["pem", "crypto", "ring"] }
rustls = { version = "0.23.12", optional = true, default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2.1.3", optional = true, default-features = false }
rustls-webpki = { version = "0.102.7", optional = true, default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", optional = true, default-features = false, features = ["ring"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11.5"
expectest = "0.12.0"
pretty_assertions = "1.4.0"
quickcheck = "1.0.3"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json", "http2"] }
test-log = "0.2.16"
test-env-log = "0.2.8"
tokio-test = "0.4.4"
tracing-subscriber = "0.3.18"
