[package]
name = "pact_mock_server"
version = "1.2.16"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements in process mock server"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-core-mock-server/tree/main/pact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies
tls = ["dep:hyper-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:tokio-rustls"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.31"
hyper = { version = "0.14.32", features = ["full"] }
hyper-rustls = { version = "0.24.2", optional = true }
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
pact_matching = { version =  "~1.2.12", default-features = false }
pact_models = { version = "~1.3.3", default-features = false }
pact-plugin-driver = { version = "~0.7.4", optional = true, default-features = false }
rustls = { version = "~0.21.12", optional = true }
rustls-pemfile = { version = "1.0.4", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = { version = "~0.24.1", optional = true }
tracing = "0.1.41"
tracing-core = "0.1.34"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
quickcheck = "1.0.3"
expectest = "0.12.0"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
env_logger = "0.11.8"
test-log = "0.2.17"
test-env-log = "0.2.8"
tracing-subscriber = "0.3.19"
