[package]
name = "pact_mock_server"
version = "2.1.3"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2024"
description = "Pact-Rust support library that implements in process mock server"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-core-mock-server/tree/main/pact_mock_server"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls", "form_urlencoded"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies
tls = ["dep:hyper-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:tokio-rustls", "dep:rcgen", "dep:rustls-webpki"]
form_urlencoded = ["pact_models/form_urlencoded", "pact_matching/form_urlencoded"]

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
futures = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-rustls = { version = "0.27.5", optional = true, default-features = false, features = ["http1", "http2", "ring", "webpki-tokio", "tls12", "logging"]  }
hyper-util = { version = "0.1.12", features = ["full"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
pact_matching = { version =  "~2.0.0-beta.3", default-features = false }
pact_models = { version = "~1.3.3", default-features = false }
pact-plugin-driver = { version = "~0.7.4", optional = true, default-features = false }
rcgen = {  version = "0.13.2", optional = true, default-features = false, features = ["pem", "crypto", "ring"] }
rustls = { version = "0.23.27", optional = true, default-features = false, features = ["ring"] }
rustls-pemfile = { version = "2.2.0", optional = true }
rustls-webpki = { version = "0.103.3", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = { version = "0.26.2", optional = true, default-features = false, features = ["ring"] }
tracing = "0.1.41"
tracing-core = "0.1.34"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11.8"
expectest = "0.12.0"
pretty_assertions = "1.4.1"
quickcheck = "1.0.3"
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json", "http2"] }
test-log = "0.2.17"
test-env-log = "0.2.8"
tokio-test = "0.4.4"
tracing-subscriber = "0.3.19"
