[package]
name = "pact_mock_server_cli"
version = "2.0.0-beta.1"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Standalone pact mock server for consumer pact tests"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-core-mock-server/tree/main/pact_mock_server_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls"]
datetime = ["pact_models/datetime", "pact_matching/datetime", "pact_mock_server/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_matching/xml", "pact_mock_server/xml"] # support for matching XML documents
plugins = ["pact_matching/plugins", "pact_mock_server/plugins"]
multipart = ["pact_matching/multipart", "pact_mock_server/multipart"] # suport for MIME multipart bodies
tls = ["pact_mock_server/tls", "dep:rustls"]

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["cargo"] }
comfy-table = "7.1.1"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = "0.1.7"
maplit = "1.0.2"
itertools = "0.14.0"
log = "0.4.22"
lazy_static = "1.5.0"
pact_matching = { version = "~2.0.1", default-features = false }
pact_mock_server = { version = "~2.1.0", path = "../pact_mock_server", default-features = false }
pact_models = { version = "~1.3.6", default-features = false }
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
rustls = { version = "0.23.12", optional = true, default-features = false, features = ["ring"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-core = "0.1.32"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time", "tracing-log"] }
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
webmachine-rust = "0.5.0"

[dev-dependencies]
quickcheck = "1.0.3"
expectest = "0.12.0"
trycmd = "0.15.7"
test-log = "0.2.16"
env_logger = "0.11.5"

# create bin and lib entries
[[bin]]
name = "pact_mock_server_cli"
path = "src/bin.rs"
[lib]
name = "pact_mock_server_cli"
path = "src/lib.rs"