[workspace]
members = [
    "pact_models",
    "pact_matching",
    "pact_mock_server",
    "pact_mock_server_cli",
    "pact_consumer",
    "pact_verifier",
    "pact_verifier_cli",
    "pact_cli",
    "pact_ffi",
    "pact_wasm"
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
