[workspace]
members = [
    "pact_models",
    "pact_matching",
    "pact_mock_server",
    "pact_mock_server_cli",
    "pact_consumer",
    "pact_verifier",
    "pact_verifier_cli",
    "pact_cli",
    "pact_ffi"
]
exclude = [
    "pact_wasm"
]

[patch.crates-io]
onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false }
