[package]
name = "pact_mockserver_mk2"
version = "0.0.0"
authors = ["Ronald Holshausen <uglyog@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
helix = "0.7"
pact_matching = { version = "0.4", path = "../../rust/pact_matching" }
pact_mock_server = { version = "0.4", path = "../../rust/pact_mock_server" }
serde_json = "1.0"
log = "0.3.8"
simplelog = "0.4.0"
uuid = { version = "0.6", features = ["v4"] }
