[package]
name = "pact_cli"
version = "0.0.0"
authors = ["Ronald Holshausen <rholshausen@dius.com.au>"]
edition = "2021"
description = "CLI utilities for Pact"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
clap = "2.31.2"
serde_json = "1.0"
serde = "1.0"
pact_models = { version = "~1.1.17", path = "../pact_models" }
pact_matching = { version = "~1.1.9", path = "../pact_matching" }
anyhow = "1.0.40"
log = "0.4.14"
simplelog = "0.12.1"
glob = "0.3.0"
maplit = "1.0.2"
ansi_term = "0.12.1"

[dev-dependencies]
expectest = "0.12.0"
