[package]
name = "pact_consumer"
version = "1.0.4"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>", "Eric Kidd <git@randomhacks.net>"]
edition = "2021"
description = "Pact-Rust module that provides support for writing consumer pact tests"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_consumer"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT AND Apache-2.0"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls"]
datetime = ["pact_models/datetime", "pact_matching/datetime", "pact_mock_server/datetime", "pact-plugin-driver?/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_matching/xml", "pact_mock_server/xml", "pact-plugin-driver?/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins", "pact_mock_server/plugins"]
multipart = ["pact_matching/multipart", "pact_mock_server/multipart"] # suport for MIME multipart bodies
tls = ["pact_mock_server/tls"]

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
bytes = "1.4.0"
futures = "0.3.28"
itertools = "0.10.5"
lazy_static = "1.4.0"
maplit = "1.0.2"
pact_matching = { version = "~1.1.3", path = "../pact_matching", default-features = false }
pact_mock_server = { version = "~1.2.1", path = "../pact_mock_server", default-features = false }
pact_models = { version = "~1.1.9", default-features = false }
pact-plugin-driver = { version = "~0.4.5", optional = true, default-features = false }
regex = "1.7.3"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37" # This needs to be the same version across all the libs (i.e. plugin driver)
tracing-core = "0.1.30"  # This needs to be the same version across all the pact libs (i.e. pact ffi)
url = "2.3.1"
uuid = { version = "1.3.0", features = ["v4"] }

[dev-dependencies]
quickcheck = "1.0.3"
env_logger = "0.10.0"
expectest = "0.12.0"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
rand = "0.8.5"
tokio-test = "0.4.2"
test-log = { version = "0.2.11", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log", "fmt"] }
pretty_assertions = "1.3.0"
