[package]
name = "pact_consumer"
version = "1.1.2"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>", "Eric Kidd <git@randomhacks.net>"]
edition = "2021"
description = "Pact-Rust module that provides support for writing consumer pact tests"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_consumer"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT AND Apache-2.0"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls"]
datetime = ["pact_models/datetime", "pact_matching/datetime", "pact_mock_server/datetime", "pact-plugin-driver?/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_matching/xml", "pact_mock_server/xml", "pact-plugin-driver?/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins", "pact_mock_server/plugins"]
multipart = ["pact_matching/multipart", "pact_mock_server/multipart"] # suport for MIME multipart bodies
tls = ["pact_mock_server/tls"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bytes = "1.5.0"
futures = "0.3.29"
itertools = "0.12.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
pact_matching = { version = "~1.1.9", path = "../pact_matching", default-features = false }
pact_mock_server = { version = "~1.2.4", path = "../pact_mock_server", default-features = false }
pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
pact-plugin-driver = { version = "~0.5.1", optional = true, default-features = false }
regex = "1.10.2"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40" # This needs to be the same version across all the libs (i.e. plugin driver)
tracing-core = "0.1.32"  # This needs to be the same version across all the pact libs (i.e. pact ffi)
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
quickcheck = "1.0.3"
env_logger = "0.10.1"
expectest = "0.12.0"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
rand = "0.8.5"
tokio-test = "0.4.3"
test-log = { version = "0.2.14", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log", "fmt"] }
pretty_assertions = "1.4.0"
