[package]
name = "pact_ffi"
version = "0.3.18"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>", "Matt Fellows <matt.fellows@onegeek.com.au>", "Andrew Lilley Brinker <abrinker@mitre.org>", "Caleb Stepanian <cstepanian@mitre.org>"]
edition = "2021"
description = "Pact interface for foreign languages."
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_ffi"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver", "ffi"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.66"
pact_matching = { version = "1.0.2", path = "../pact_matching" }
pact_models = "1.0.2"
pact_mock_server = { version = "0.9.7", path = "../pact_mock_server" }
pact_verifier = { version = "0.13.19", path = "../pact_verifier" }
libc = "0.2.137"
zeroize = "1.5.7"
thiserror = "1.0.37"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
bytes = "1.2.1"
lazy_static = "1.4.0"
maplit = "1.0.2"
rand = "0.8.5"
chrono = "0.4.22"
chrono-tz = "0.8.0"
env_logger = "0.10.0"
itertools = "0.10.5"
onig = { version = "6.4.0", default-features = false }
uuid = { version = "1.2.1", features = ["v4"] }
multipart = { version = "0.18.0", default-features = false, features = ["client", "mock"] }
rand_regex = "0.15.1"
regex-syntax = "0.6.28"
clap = "2.34.0"
regex = "1.7.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-rustls = "0.23.4"
sxd-document = "0.3.2"
either = "1.8.0"
pact-plugin-driver = "0.2.2"
log = "0.4.17"
tracing = "0.1.37" # This needs to be the same version across all the libs (i.e. plugin driver)
tracing-core = "0.1.30"  # This needs to be the same version across all the pact libs (i.e. plugin driver)
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
tracing-log = "0.1.3"
panic-message = "0.3.0"

[dev-dependencies]
expectest = "0.12.0"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
quickcheck = "1.0.3"
test-log = "0.2.11"
tempfile = "3.3.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
os_info = { version = "3.5.1", default-features = false }
