[package]
name = "pact_ffi"
version = "0.4.15"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>", "Matt Fellows <matt.fellows@onegeek.com.au>", "Andrew Lilley Brinker <abrinker@mitre.org>", "Caleb Stepanian <cstepanian@mitre.org>"]
edition = "2021"
description = "Pact interface for foreign languages."
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_ffi"
readme = "README.md"
keywords = ["testing", "pact", "cdc", "mockserver", "ffi"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
bytes = "1.5.0"
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = "2.34.0"
either = "1.9.0"
env_logger = "0.10.1"
futures = "0.3.29"
itertools = "0.12.0"
lazy_static = "1.4.0"
libc = "0.2.151"
log = "0.4.20"
maplit = "1.0.2"
multipart = { version = "0.18.0", default-features = false, features = ["client", "mock"] }
onig = { version = "6.4.0", default-features = false }
pact_matching = { version = "~1.1.9", path = "../pact_matching" }
pact_mock_server = { version = "~1.2.4", path = "../pact_mock_server" }
pact_models = { version = "~1.1.17", path = "../pact_models" }
pact-plugin-driver = { version = "~0.5.1" }
pact_verifier = { version = "~1.0.5", path = "../pact_verifier" }
panic-message = "0.3.0"
rand = "0.8.5"
rand_regex = "0.15.1"
regex = "1.10.2"
regex-syntax = "0.6.29"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sxd-document = "0.3.2"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.40" # This needs to be the same version across all the libs (i.e. plugin driver)
tracing-core = "0.1.32"  # This needs to be the same version across all the pact libs (i.e. plugin driver)
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
uuid = { version = "1.6.1", features = ["v4"] }
zeroize = "1.7.0"

[dev-dependencies]
expectest = "0.12.0"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
quickcheck = "1.0.3"
test-log = "0.2.14"
tempfile = "3.8.1"
home = "0.5.9"
pretty_assertions = "1.4.0"
rstest = "0.18.2"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
os_info = { version = "3.7.0", default-features = false }
