[package]
name = "pact_file_verifier"
version = "0.0.0"
authors = ["Ronald Holshausen <rholshausen@dius.com.au>"]
edition = "2018"
description = "Pact file verifier"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_file_verifier"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
clap = "2.31.2"
serde_json = "1.0"
serde = "1.0"
pact_models = { version =  "0.0", path = "../pact_models" }
pact_matching = { version = "0.9", path = "../pact_matching" }
anyhow = "1.0.40"
log = "0.4.14"
simplelog = "0.10.0"
