[package]
name = "pact_matching"
version = "1.1.10"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that implements request and response matching logic"
documentation = "https://docs.rs/pact_matching/"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_matching"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "dep:chrono"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "dep:sxd-document"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver"]
multipart = ["dep:multer"] # suport for MIME multipart bodies

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.70"
base64 = "0.21.0"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.24", features = ["std", "clock"], default_features = false, optional = true }
difference = "2.0.0"
futures = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
itertools = "0.10.5"
lazy_static = "1.4.0"
lenient_semver = "0.4.2"
maplit = "1.0.2"
md5 = "0.7.0"
mime = "0.3.17"
multer = { version = "2.1.0", features = ["all"], optional = true }
nom = "7.1.3"
onig = { version = "6.4.0", default-features = false }
pact_models = { version = "~1.1.17", path = "../pact_models", default-features = false }
pact-plugin-driver = { version = "~0.5.1", optional = true, default-features = false }
rand = "0.8.5"
semver = "1.0.17"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_urlencoded = "0.7.1"
sxd-document = { version = "0.3.2", optional = true }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37" # This needs to be the same version across all the libs (i.e. plugin driver, pact ffi)
tracing-core = "0.1.30"  # This needs to be the same version across all the pact libs (i.e. plugin driver, pact ffi)
tree_magic_mini = "3.0.3"
uuid = { version = "1.3.0", features = ["v4"] }

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["rustls-tls-native-roots", "json"]

[dev-dependencies]
quickcheck = "1"
expectest = "0.12.0"
env_logger = "0.10.0"
hamcrest2 = "0.3.0"
test-log = { version = "0.2.11", features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log", "fmt"] }
ntest = "0.9.0"
pretty_assertions = "1.3.0"
rstest = "0.17.0"
